fix(app.css): alignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
  flex-direction: row;
  margin-top: 10vh;
 }
-
 .align {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
